# scinewsAI

./: .gitignore  ENV_SETUP.md  README.md  docker-compose.yml  setup-env.sh
.github/workflows/: run_pipeline.yml
ai_translator/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  seed.py
ai_translator/src/: config.py  db.py  db_processor.py  ingest.py  metrics.py  rag.py  tracking.py
arxiv_paper_scraper/: .env.example  README.md  categories.py  db.py  docker-compose.yaml  fetch_articles.py  requirements.txt
paper_scraper/: .env.example  Dockerfile  README.md  docker-compose.yaml  init_db.py  main.py  requirements.txt
paper_scraper/modules/: arxiv_source.py  config.py  database.py  network.py  text_utils.py
web/: docker-compose.yml  init.sql
web/backend/: .env.example  alembic.ini  requirements.txt  test_email.py  test_notification.py  verify_config.py
web/backend/app/: main.py
web/backend/app/api/: articles.py  auth.py  likes.py  newsletter.py  topics.py  users.py
web/backend/app/core/: config.py  security.py
web/backend/app/db/: database.py  supabase.py
web/backend/app/models/: __init__.py  article.py  like.py  subscription.py  topic.py  user.py
web/backend/app/schemas/: __init__.py  article.py  like.py  topic.py  user.py
web/backend/app/services/: email.py  notification.py
web/frontend/: .env.example  Dockerfile.dev  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.ts
web/frontend/src/: App.css  App.tsx  index.css
web/frontend/src/contexts/: AuthContext.tsx
web/frontend/src/data/: mockData.ts
(+19 files in other folders)
