[tool.poetry]
name = "ai-translator"
version = "0.1.0"
description = "RAG pipeline for translating scientific papers to accessible language"
authors = ["Antigravity"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-anthropic = "^0.2.0"
langchain-ollama = "^0.2.0"
langchain-chroma = "^0.1.0"
chromadb = "^0.5.0"
pypdf = "^5.0.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
